# Curs_OOP

./: .flake8  README.md  main.py  pyproject.toml
src/: category.py  product.py  product_search.py
tests/: conftest.py  test_category.py  test_product.py
